--- a/ippa/templates/home.html
+++ b/ippa/templates/home.html
@@ -116,7 +116,7 @@
 	<main>
 		<h2>Category List</h2>
 		<article>
-			<h3> Tips for Healthy and Glowing Skin</h3>
+			<h3> Tip for Healthy and Glowing Skin</h3>
 			<p>Haiiiii!!!! Mau kulit yang sehat dan glowing? Kamu datang ke tempat yang tepat! Di sini kami berbagi semua tips untuk perawatan kulit, mulai dari cara hydrasi yang benar sampai pilih produk skincare yang pas buat kamu. Yuk, ikutin kami menjelajahi semua tips nutrisi, rutinitas perawatan kulit harian, dan resep DIY yang bakal meningkatkan kecantikan alami kulitmu. Ayo buat kulitmu makin cerah dan berkilau setiap hari dengan tips dari LushGlow✨ .</p>
 			
 		</article>
