--- a/ippa/templates/home.html
+++ b/ippa/templates/home.html
@@ -12,21 +12,28 @@
 
 		header {
 		  background-color: pink;
-		  padding: 20px;
+		  padding: 30px;
 		  text-align: center;
 		  color: blue sky;
 		}
 
 		header h1 {
-		  margin-bottom: 0;
+		  margin-bottom: 10;
+		}
+
+		header h2 {
+			float:left;
+			color: white;
 		}
 
 		nav ul {
-		  list-style: none;
-		  margin: 0;
-		  padding: 0;
+		  list-style:none ;
+		  margin: 10;
+		  padding: 10;
 		  display: flex;
-		  justify-content: space-between;
+		  justify-content: center;
+		  float: middle;
+
 		}
 
 		nav li {
@@ -49,7 +56,7 @@
 		}
 
 		article {
-		  background-color: #white;
+		  background-color: rgb(252, 239, 245);
 		  padding: 20px;
 		  margin-bottom: 20px;
 		  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -60,14 +67,14 @@
 		}
 
 		footer {
-		  background-color: palevioletred;
+		  background-color: pink;
 		  padding: 20px;
 		  text-align: center;
 		  color: #fff;
 		}
 
 		footer p {
-		  margin-bottom: 10px;
+		  margin-bottom: 15px;
 		}
 
 		footer a {
@@ -82,19 +89,28 @@
 }
 
 .image-container img {
-	width: 100px;
-	height:50px;
+
+	display: flex;
+    align-items: center;
+	justify-content: center;
+	float: middle;
+	
+}
+img {
+	width: 150px;
+	height: 100x;
 }
 	</style>
 </head>
 <body>
 	<header>
-    
+		
+		<div style = "display: flex; justify-content: center ;"
+		class="image-container">
+			<img src="https://i.pinimg.com/originals/24/2c/64/242c646579cf7f048d2c4a2e69c2b127.png" alt="Sample Image">
+			</div>
 		<nav>
 		<ul>
-			 <div class="image-container">
-			<img src="https://i.pinimg.com/originals/24/2c/64/242c646579cf7f048d2c4a2e69c2b127.png" alt="Sample Image">
-		</div>
             <li><a href="blog.html">Blog</a></li>
 			<li><a href="about.html">About Us</a></li>
 			<li><a href="tips.html">Tips</a></li>
@@ -102,21 +118,21 @@
 	        <li><a href="contact.html">Contact</a></li>
 			
 		</ul>
-
 	</nav>
 	</header>
 	
-
+	
 	<br>
 
 	<head>
+		<title>LushGlow</title>
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	
 	<main>
 		<h2>Category List</h2>
 		<article>
-			<h3> Tip for Healthy and Glowing Skin</h3>
+			<h3> Tips for Healthy and Glowing Skin</h3>
 			<p>Haiiiii!!!! Mau kulit yang sehat dan glowing? Kamu datang ke tempat yang tepat! Di sini kami berbagi semua tips untuk perawatan kulit, mulai dari cara hydrasi yang benar sampai pilih produk skincare yang pas buat kamu. Yuk, ikutin kami menjelajahi semua tips nutrisi, rutinitas perawatan kulit harian, dan resep DIY yang bakal meningkatkan kecantikan alami kulitmu. Ayo buat kulitmu makin cerah dan berkilau setiap hari dengan tips dari LushGlow✨ .</p>
 			
 		</article>
